domain-server/resources/web/css/style.css
body {
  position: relative;
  padding-bottom: 30px;
  margin-top: 70px;
}

[hidden] {
  display: none !important;
}

.table-lead .lead-line {
  background-color: black;
}

.table-lead h3 {
  background-color: white;
  float: left;
  margin-right: 5px;
}

.table-lead .lead-line {
  height: 2px;
  overflow: hidden;
  position: relative;
  top: 40px;
}

.table .value-row td,
.table .value-category td,
.table .inputs td {
  vertical-align: middle;
}

.table .table-checkbox {
  /* Fix IE sizing checkboxes to fill table cell */
  width: auto;
  margin-left: auto;
  margin-right: auto;
}

.value-category:not(.inputs) {
  font-weight: bold;
  background: #f5f5f5;
}

.table .value-category [message]::after {
  content: attr(message);
  font-style: italic;
  font-weight: normal;
}

.table .value-row.contracted,
.table .inputs.contracted {
  display: none;
}

.toggle-category {
  cursor: pointer;
}

.toggle-category-icon {
  padding: 4px;
  margin-right: 8px;
}

.glyphicon-remove {
  font-size: 24px;
}

.glyphicon-remove:hover {
  color: #000000;
  cursor: pointer;
}

span.port {
  color: #666666;
}

.advanced-setting, .deprecated-setting {
  display: none;
}

#setup-sidebar.affix {
  /* This overrides a case where going to the bottom of the page,
   * then scrolling up, causes `position: relative` to be added to the style
   */
  position: fixed !important;
}

#setup-sidebar button {
  width: 100%;
  margin-top: 10px;
}

#small-save-button {
  width: 100%;
  margin-bottom: 15px;
}

td.buttons {
  width: 30px;
}

td.buttons.reorder-buttons {
  width: 40px;
}

td .glyphicon {
  text-align: center;
  font-size: 12px;
}

td.add-del-buttons .glyphicon {
  display: block;
}

td.reorder-buttons .glyphicon {
  display: inherit;
}

td a.glyphicon {
  color: black;
  text-decoration: none;
}

tr.new-row {
  color: #3c763d;
  background-color: #dff0d8;
}

tr.invalid-input {
  background-color: #f2dede;
}

.graphable-stat {
  text-align: center;
  color: #5286BC;
  cursor: pointer;
}

.highchart-modal .modal-dialog {
  width: 650px;
}

table {
  table-layout: fixed;
  word-wrap: break-word;
}

caption {
  color: #333;
  font-weight: 700;
  padding-top: 0;
}

table > tbody > .headers > td {
  vertical-align: middle;
}

table .headers + .headers td {
  font-size: 13px;
  color: #222;
}

#security table .headers td + td {
  text-align: center;
}

.tooltip.top .tooltip-arrow {
  border-top-color: #fff;
  border-width: 10px 10px 0;
  margin-bottom: -5px;
}

.tooltip-inner {
  padding: 20px 20px 10px 20px;
  font-size: 14px;
  text-align: left;
  color: #333;
  background-color: #fff;
  box-shadow: 0 3px 8px 8px #e8e8e8;
}

.tooltip.in {
  opacity: 1;
}

.tooltip-inner ul {
  padding-left: 0;
  margin-bottom: 15px;
}

.tooltip-inner li {
  list-style-type: none;
  margin-bottom: 5px;
}

#security .tooltip-inner {
  max-width: 520px;
}

#xs-advanced-container {
  margin-bottom: 20px;
}

#advanced-toggle-button-xs {
  width: 100%;
}

/* styling for bootstrap-switch toggles */
.checkbox-help {
  margin-top: 10px;
}

/* CSS only spinner for AJAX requests */

.spinner {
  margin: 30px auto 0;
  width: 70px;
  text-align: center;
}

.spinner > div {
  width: 18px;
  height: 18px;
  background-color: #333;

  border-radius: 100%;
  display: inline-block;
  -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
  animation: bouncedelay 1.4s infinite ease-in-out;
  /* Prevent first frame from flickering when animation starts */
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.spinner .bounce1 {
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s;
}

.spinner .bounce2 {
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}

.col-centered {
  float: none;
  margin: 0 auto;
}

.centered-hack-parent {
  text-align: center;
}

.centered-hack {
  text-align: left;
  display: inline-block;
}

@-webkit-keyframes bouncedelay {
  0%, 80%, 100% { -webkit-transform: scale(0.0) }
  40% { -webkit-transform: scale(1.0) }
}

@keyframes bouncedelay {
  0%, 80%, 100% {
    transform: scale(0.0);
    -webkit-transform: scale(0.0);
  } 40% {
    transform: scale(1.0);
    -webkit-transform: scale(1.0);
  }
}

/* From https://gist.github.com/alexandrevicenzi/680147013e902a4eaa5d */
.glyphicon-refresh-animate {
  -animation: spin .7s infinite linear;
  -ms-animation: spin .7s infinite linear;
  -webkit-animation: spinw .7s infinite linear;
  -moz-animation: spinm .7s infinite linear;
}

@keyframes spin {
  from { transform: scale(1) rotate(0deg); }
  to { transform: scale(1) rotate(360deg); }
}

@-webkit-keyframes spinw {
  from { -webkit-transform: rotate(0deg); }
  to { -webkit-transform: rotate(360deg); }
}

@-moz-keyframes spinm {
  from { -moz-transform: rotate(0deg); }
  to { -moz-transform: rotate(360deg); }
}

.warning-text {
  padding-top: 10px;
  color: #EB5757;
}

.account-connected-header {
  color: #6FCF97;
  font-size: 30px;
  margin-right: 20px;
}

#visit-domain-link,
.blue-link {
  font-size: 14px;
  text-decoration-line: underline;
  font-weight: normal;
  color: #2F80ED;
}

#manage-cloud-domains-link {
  text-align: center;
  margin-top: 20px;
}

